# Snort3Converter

./: FinalMain.py  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py  snort3convert.py  testconverter.py  testsnort3outputrules.txt  testsurricatainputrules.txt  tox.ini
.github/workflows/: publish_to_testpypi.yml  tox_test.yml
requirements/: base.txt  dev.txt
src/snort3_conv_tools/: snort3convert.py
tests/: test_converter.py
tests/data_files/: testsnort3outputrules.txt
