[metadata]
name = snort3_conv_tools
author = CiscoNate
author_email = cisconate@gmail.com
description = A collection of tools for converting IDS/IPS/NGFW rules into Snort 3
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/Cisconate/Snort3Converter.git
project_urls =
  Bug Tracker = https://github.com/Cisconate/Snort3Converter/issues
  Documentation = https://github.com/Cisconate/Snort3Converter
  Source Code = https://github.com/Cisconate/Snort3Converter
license = MIT
classifiers =
  Development Status :: 2 - Pre-Alpha
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python 3
keywords =
  setup
  distutils

[options]
zip_safe = True
package_dir =
  = src
packages =
  snort3_conv_tools
install_requires =
  unidecode
  argparse

[tool:pytest]
testpaths =
  tests

[aliases]
test=pytest
